WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291545
[WebGPU] nullptr crash in index buffer validation
https://bugs.webkit.org/show_bug.cgi?id=291545
Summary
[WebGPU] nullptr crash in index buffer validation
Mike Wyrzykowski
Reported
2025-04-14 17:08:06 PDT
[WebGPU] nullptr crash in index buffer validation
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-04-14 17:17:13 PDT
<
rdar://problem/149246187
>
Mike Wyrzykowski
Comment 2
2025-04-14 17:17:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44078
EWS
Comment 3
2025-04-14 22:45:00 PDT
Committed
293702@main
(07dade918043): <
https://commits.webkit.org/293702@main
> Reviewed commits have been landed. Closing PR #44078 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug