[WebGPU] nullptr crash in index buffer validation https://bugs.webkit.org/show_bug.cgi?id=291545 rdar://149246187

Reviewed by Cameron McCormack.

293608@main moved a RefPtr to a function callback inside a for-loop,
so upon the second iteration of the loop the RefPtr was nullptr and we
crashed with a nullptr access.

Address this by looking up the buffer in the for loop.

* LayoutTests/fast/webgpu/nocrash/fuzz-291545-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-291545.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::CommandEncoder):

Canonical link: https://commits.webkit.org/293702@main